tests/NormalTests/paczka2/big_fuzzy/92993181.err
Error in line 5: 9DnvVnl A914 53,4
Error in line 9: 9DnvVnl S237 69,5
Error in line 10: 9DnvVnl A298 82,3
Error in line 4: rY1Tvypx S883 25,8
Error in line 16: TVLG A914 54,8
Error in line 22: TVLG S883 79,2
Error in line 25: rY1Tvypx A914 71,7
Error in line 23: TEt39ATUMQ9 S883 36,0
Error in line 42: rY1Tvypx S237 15,6
Error in line 51: S237 S883 3,4
Error in line 59: TVLG S883 -3,7
Error in line 54: TVLG S883 76,8
Error in line 56: TEt39ATUMQ9 A914 94,2
Error in line 72: R5tVNOisJS8 S883 5,1
Error in line 89: TVLG A914 16,9
Error in line 90: TEt39ATUMQ9 A298 163,3
Error in line 100: TEt39ATUMQ9 S237 66,7
Error in line 110: rY1Tvypx A914 43,
Error in line 130: S237 S883 93,3
Error in line 134: 9DnvVnl S237 59,2
Error in line 131: R5tVNOisJS8 S237 48,6
Error in line 142: 9DnvVnl A914 69,5
Error in line 143: 9DnvVnl A298 56,7
Error in line 146: K6xxKLJNH S237 47,1
Error in line 158: rY1Tvypx A914 259,67
Error in line 145: S237 S237 256,3
Error in line 151: TVLG A298 74,8
Error in line 155: rY1Tvypx A914 58,5
Error in line 181: 9DnvVnl A914 67,4
Error in line 178: rY1Tvypx S883 24,2
Error in line 183: K6xxKLJNH S237 95,9
Error in line 190: 9DnvVnl S883 11,2
Error in line 194: rY1Tvypx S883 87,27
Error in line 195: TVLG S883 82,0
Error in line 187: R5tVNOisJS8 A914 9,6
Error in line 197: TVLG A298 58,5
Error in line 199: TVLG S883 79,7
Error in line 205: 9DnvVnl A914 -1,8
Error in line 202: TVLG A914 22,5
Error in line 216: rY1Tvypx S883 196,4
Error in line 223: S237 S237 19,3
Error in line 192: TEt39ATUMQ9 A914 22,1
Error in line 193: 9DnvVnl A914 3,3
Error in line 234: TEt39ATUMQ9 A914 1,6
Error in line 231: TVLG A914 281,9
Error in line 239: TVLG A298 37,0
Error in line 226: rY1Tvypx A298 54,7
Error in line 247: TVLG S2s7 117,7
Error in line 244: TEt39ATUMQ9 S883 96,1
Error in line 248: TEt39ATUMQ9 A299 99,4
